Created Tag component

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
 <body>
   <h1>webpack starter</h1>
   <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <mp-tag >Foo</mp-tag>
+  <mp-tag >Bar!!!</mp-tag>
 </body>
 </html>
