Added scripts related to Shadow DOM

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Web Components Playground</title>
+  <style>
+    p {
+      color: red;
+    }
+  </style>
 </head>
+
 <body>
+
   <!-- <mp-static-header></mp-static-header> -->
-  <script>
+
+  <!-- <script>
     let $staticHeader = document.createElement("mp-static-header");
     setTimeout(() => {
       document.body.appendChild($staticHeader);
     }, 3000)
-  </script>
+    </script> -->
+
+  <!-- <a is="custom-anchor" href="http://www.google.com/" >Go to Google</a> -->
+
+
+  <!-- <p>Paragraph text in the outer application.</p>
+  <div id="simple-div"></div>
+  <p>Some more paragraph text in the outer application.</p> -->
 </body>
+
 </html>
