Added tag list container component

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Web Components Playground</title>
-  <style>
-    p {
-      color: red;
-    }
-  </style>
 </head>
 
 <body>
+
+
+<mp-tag-list-container></mp-tag-list-container>
+<!--<mp-tag-list tags="abs"></mp-tag-list>-->
 
   <!-- <mp-static-header></mp-static-header> -->
 
